# mcpzero

./: .gitignore  LICENSE  PROTOCOL.md  README.md  install.sh  project.md
.github/workflows/: ci.yml  release.yml
cli/: .gitignore  Dockerfile  Makefile  PROTOCOL.md  README.md  docker-compose.yml  go.mod
cli/cmd/mcpzero/: main.go
cli/internal/auth/: credentials.go  login.go
cli/internal/cmd/: login.go  root.go  servers.go  servers_test.go  tunnel.go
cli/internal/config/: config.go
cli/internal/daemon/: manager.go  proc_unix.go  proc_windows.go  state.go
cli/internal/mcpconfig/: discover.go  discover_test.go  mcpconfig.go  mcpconfig_test.go
cli/internal/secret/: secret.go  secret_test.go
cli/internal/stdio/: proc_unix.go  proc_windows.go  session.go  stdio.go
cli/internal/tunnel/: client.go  client_integration_test.go
cli/internal/upstream/: http.go  http_test.go  stdio.go  stdio_test.go  upstream.go  upstream_test.go
cli/internal/version/: version.go
cli/packaging/npm/: README.md  install.js  package.json
cli/packaging/pypi/: README.md  pyproject.toml
cli/packaging/pypi/mcpzero_cli/: __init__.py
cli/packaging/stubs/npm/: README.md  package.json
cli/packaging/stubs/pypi/: README.md  pyproject.toml
cli/packaging/stubs/pypi/mcpzero_reserved/: __init__.py
cli/scripts/: build-all.sh  publish-packages.sh  release.sh
docs/: index.md
docs/api/: mcp-endpoints.md
docs/cli/: containers.md  cursor.md  install.md  login.md  troubleshooting.md  tunnel.md
docs/getting-started/: overview.md
docs/sdk/: overview.md
docs/sdk/tunnel/: go.md  python.md  rust.md  typescript.md
examples/: README.md
examples/sqlite/: README.md  mcp-config.json  seed.sql
