[project]
name = "mcpzero-cli"
version = "0.1.1"
description = "MCPZERO tunnel CLI — installs the prebuilt mcpzero binary for your platform."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "MCPZERO" }]

[project.urls]
Homepage = "https://mcpzero.io"
Source = "https://github.com/mcpzero/mcpzero"

[project.scripts]
mcpzero = "mcpzero_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpzero_cli"]
