[project]
name = "mcpzero"
version = "0.0.0"
description = "Reserved namespace. Install the CLI as mcpzero-cli or the SDK as mcpzero-sdk."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "MCPZERO" }]

[project.urls]
Homepage = "https://mcpzero.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship a uniquely named module so it never shadows the `mcpzero` import provided
# by the mcpzero-sdk distribution.
[tool.hatch.build.targets.wheel]
packages = ["mcpzero_reserved"]
