[project]
name = "mcpzero"
version = "0.0.0"
description = "Reserved namespace. Install the CLI as mcpzero-cli."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "MCPZERO" }]

[project.urls]
Homepage = "https://mcpzero.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship a uniquely named module so it never shadows a future `mcpzero` import.
[tool.hatch.build.targets.wheel]
packages = ["mcpzero_reserved"]
